# plyngent

./: CLAUDE.md  LICENSE  README.md  prek.toml  pyproject.toml
.github/workflows/: ci.yml  python-publish.yml
doc/: architecture.md  development-principles.md  plugins.md  plyngent.example.toml
scripts/: wine_env.py  wine_pdm.py  wine_pdm.sh
src/plyngent/: __init__.py  __main__.py  prompting.py  typedef.py
src/plyngent/agent/: __init__.py  budget.py  chat.py  client.py  compact.py  directive_checkpoint.py  events.py  loop.py  responses_bridge.py  responses_client.py  todo_nag.py  todo_stack.py  tools.py  usage.py
src/plyngent/cli/: app.py  display.py  editor.py  exit_codes.py  export.py  input_text.py  interrupt.py  limits.py  models_source.py  provider_recovery.py  readline_setup.py  repl.py  retry.py  selection.py  slash.py  state.py
src/plyngent/config/: __init__.py  models.py  path.py  store.py
src/plyngent/lmproto/deepseek/: __init__.py
src/plyngent/lmproto/deepseek/openai_compat/: client.py  model.py
src/plyngent/lmproto/openai/: __init__.py  client.py  model.py
src/plyngent/lmproto/openai_compatible/: __init__.py  client.py  config.py  model.py  responses_model.py
src/plyngent/memory/: __init__.py
src/plyngent/memory/database/: __init__.py  engine.py  schema.py  store.py
src/plyngent/runtime/: __init__.py  client_factory.py
src/plyngent/tools/: __init__.py  catalog.py  context.py  danger.py  grants.py  plugins.py  temp_workspace.py  todo.py  view.py  workspace.py
src/plyngent/tools/chat/: __init__.py  ask.py  choose.py  form.py
src/plyngent/tools/file/: __init__.py  edit_lineno.py  edit_replace.py  fs_ops.py  glob_paths.py  grep_files.py  listdir.py  read.py  tree.py  write.py
src/plyngent/tools/net/: __init__.py  client.py  fetch.py  grants.py  policy.py
src/plyngent/tools/process/: __init__.py  ask_into_pty.py  close_pty.py  command_exec.py  open_pty.py  pty_backend.py  pty_session.py  pty_terminal.py  read_pty.py  run_command.py  run_command_batch.py  write_pty.py  write_pty_keys.py
src/plyngent/tools/vcs/: __init__.py  backend.py  detect.py  git_backend.py  tools.py
src/plyngent/utils/: __init__.py  components.py
tests/: conftest.py  test_prompting.py
tests/test_agent/: test_budget.py  test_compact.py  test_compact_summarize.py  test_confirm.py  test_directive_checkpoint.py  test_loop.py  test_parallel_tools.py  test_responses_bridge.py  test_run_aside.py  test_stream_merge.py  test_todo_stack.py  test_tools.py  test_usage.py
tests/test_cli/: test_app.py  test_compact_cmd.py  test_display.py  test_editor.py  test_export.py  test_input_text.py  test_interrupt.py  test_limits.py  test_models_source.py  test_oneshot.py  test_plugins_cmd.py  test_provider_recovery.py  test_readline_setup.py  test_repl_commands.py  test_retry.py  test_selection.py  test_workspace_resume.py
tests/test_config/: .gitignore  plyngent-bad.toml  plyngent-invalid.toml  plyngent-valid.toml  test_agent_section.py  test_config.py  test_plugins_section.py
tests/test_lmproto/: test_models.py  test_responses.py  test_sse_parse.py
tests/test_memory/: test_store.py
tests/test_runtime/: test_client_factory.py  test_http_timeout.py
tests/test_tools/: conftest.py  helpers.py  test_catalog.py  test_chat_tools.py  test_confirm_tags.py  test_danger.py  test_edit_lineno.py  test_fetch.py  test_file.py  test_fs_ops.py  test_glob_paths.py  test_grep_files.py  test_plugins.py  test_process.py  test_temp_workspace.py  test_todo_session.py  test_tree.py  test_vcs.py  test_view.py  test_workspace.py  test_workspace_instance.py
typings/: winpty.pyi
